<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <LinearLayout android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >
        <TextView android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:textSize="22dip"
            android:textStyle="bold"
            android:layout_marginTop="15dip"
            android:text="@string/group"/>
        <TextView android:id="@+id/group_name"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:textSize="22dip"
            android:textStyle="bold"
            android:layout_marginTop="15dip"
            android:text=""/>
        <ToggleButton android:id="@+id/button_edit_remove"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:textOn="@string/edit"
                      android:textOff="@string/remove"
                      android:layout_marginTop="7dip"
                      android:checked="true"
                >
        </ToggleButton>
        <ImageButton android:id="@+id/button_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_menu_add"
            android:background="@null"
            android:layout_marginTop="7dip"
            >
        </ImageButton>
    </LinearLayout>
    <ListView
        android:id="@android:id/list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
    />
</LinearLayout>

